--- a/styles/style.css
+++ b/styles/style.css
@@ -1,66 +1,117 @@
-.main-header {
-
-    text-align: center;
-
+body,
+html {
+    height: 100%;
 }
 
-.new-year {
-    background-image: url(/B9A1-New-Year-New-Mission/resources/Banner\ Image.png);
+
+.first-image {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../B9A1-New-Year-New-Mission/resources/Banner\ Image.png");
+    height: 67%;
+    background-position: center;
     background-repeat: no-repeat;
-    background-size: 75%%;
-    width: 1320px;
-    height: 600px;
-    flex-shrink: 0;
-    border-radius: 16px;
+    background-size: 75%;
+    position: relative;
 
 }
 
-
-.header-title {
-    margin-top: 50px;
-    color: #FFF;
+.first-image-text {
     text-align: center;
-    padding-top: 150px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
 }
 
-.header-text {
+.first-image-text-pera {
     font-size: 32px;
-    font-weight: 200px;
+    font-weight: 400;
 }
 
-.header-content {
+.first-image-text-heading {
     font-size: 72px;
-    font-weight: 600px;
-    line-height: 50px;
+    font-weight: 900;
+    line-height: 95px;
 }
 
-.body-text {
+.second-heading {
     color: #F00;
     text-align: center;
     font-size: 88px;
     font-weight: 700;
 }
 
-.body-part {
+.second-text {
+    line-height: 10px;
+}
+
+.second-pera {
     color: #F00;
     text-align: center;
     font-size: 24px;
     font-weight: 500;
-    margin-bottom: -40px;
 }
 
-.body-2ndtext {
+.third-heading {
     color: #070211;
     text-align: center;
     font-size: 48px;
     font-weight: 700;
+}
+
+.second-image {
+    width: 800px;
+    height: 500px;
+    margin-left: 250px;
+}
+
+.third-section {
+    display: flex;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../B9A1-New-Year-New-Mission/images/Vectorrr.png");
+    height: 67%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 75%;
+    position: relative;
+    padding-left: 150px;
+    text-align: center;
+    margin-top: 100px;
+    
 
 }
 
-.new-year-photo {
-    width: 600px;
-    height: 500px;
-    justify-content: space-between;
-    margin-left: 350px;
+.third-section-heading {
+    color: #FFF;
+    font-size: 48px;
+    font-weight: 600;
+    line-height: 40px;
+    letter-spacing: 4px;
+    width: 642px;
+    padding-top: 100px;
+}
 
+.third-section-pera {
+    color: rgba(255, 255, 255, 0.80);
+    font-size: 12px;
+    font-weight: 200;
+    line-height: 15px;
+    width: 697px;
+}
+
+.third-section-button {
+    color: #FFF;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.third-section-image {
+    display: flex;
+    width: 220px;
+    height: 360px;
+    padding: 0.008px 0px 0px 0px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-top: 50px;
 }
