--- a/styles/style.css
+++ b/styles/style.css
@@ -76,7 +76,7 @@ html {
     padding-left: 150px;
     text-align: center;
     margin-top: 100px;
-    
+
 
 }
 
@@ -114,4 +114,39 @@ html {
     justify-content: center;
     align-items: center;
     padding-top: 50px;
+}
+
+.forth-section {
+    background-position: center;
+    background-image: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
+    margin-top: 80px;
+    height: 67%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 75%;
+    border-radius: 100px;
+}
+
+.fourth-section-text {
+    color: #070211;
+    text-align: center;
+    font-size: 32px;
+    font-weight: 600;
+    line-height: 4px;
+    text-transform: capitalize;
+    padding-top: 100px;
+}
+
+.fourth-section-button {
+    border-radius: 8px;
+    font-size: 20px;
+    padding: 15px 28px;
+    color: #FFF;
+    margin-left: 580px;
+    font-weight: 700;
+    background-color: #F00;
+    cursor: pointer;
+}
+span{
+    color: #F00;
 }
